# nuance

./: README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  dummyItems.ts  main.tsx  routeTree.gen.ts
frontend/src/components/: header.tsx  mobile-menu.tsx  theme-toggle.tsx  underlined-span.tsx  user-nav.tsx  voca-item.tsx
frontend/src/components/providers/: auth-provider.tsx  theme-provider.tsx
frontend/src/components/ui/: accordion.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  index.tsx  settings.tsx  stats.tsx  upload.tsx
frontend/src/store/: auth.ts  sentence.ts
frontend/src/types/: voca.ts
server/: .gitignore  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 16b2bd500175_.py  dd5a304c020a_.py
server/src/: main.py
server/src/api/: dep.py
server/src/api/v1/: api.py  auth.py
server/src/api/v1/endpoints/: review.py  sentences.py  stats.py
server/src/core/: config.py  db.py  exceptions.py  security.py
server/src/dev/: insert_sample_data.py  sample_data.json
server/src/models/: __init__.py  associations.py  auth.py  sentence.py  user.py  voca.py  word.py
server/src/services/: google_auth.py  review.py  sentence.py  user.py  voca.py  word.py
